--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "type-format-utils",
   "version": "0.0.6",
-  "description": "date format",
+  "description": "this is a date,number,decimal ,format utils",
   "main": "lib/index.js",
   "repository": "https://github.com/duanguang/type-format-utils.git",
   "author": "duanguang",
@@ -15,7 +15,13 @@
     "type",
     "type-format",
     "format-util",
-    "type-format-utils"
+    "type-format-utils",
+    "number",
+    "number-format",
+    "decimal",
+    "decimal-format",
+    "money",
+    "money-format"
   ],
   "scripts": {
     "build": "rimraf lib && babel src --out-dir lib",
